ensure the detail isn't too wide on large screens

--- a/resources/frontend_client/app/css/query_builder.css
+++ b/resources/frontend_client/app/css/query_builder.css
@@ -517,6 +517,11 @@
     border: 1px solid #DEDEDE;
 }
 
+@media screen and (--breakpoint-min-xl) {
+  /* prevent the object detail from getting too wide on large screens */
+  .ObjectDetail { max-width: 1140px; }
+}
+
 .ObjectDetail-headingGroup {
     border-bottom: 1px solid #DEDEDE;
 }
